[package]
name = "razee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
async-recursion = "1.0.4"
semver = "1.0.18"
