[package]
name = "razee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
async-recursion = "1.0.4"
node-semver = "2.1.0"
bytes = "1.4.0"
tokio-util = { version = "0.7.8", features = ["io"] }
tar = "0.4.39"
flate2 = { version = "1.0.26", features = ["zlib-ng"], default-features = false }
